2021-04-17 Marek M. Cel <marekcel@marekcel.pl>
    
    * initial commit