@@ -134,11 +134,9 @@
 
 int main(int argc, char *argv[])
 {
-    //setlocale( LC_ALL, "C" );
+    setlocale( LC_ALL, "C" );
 
-#   ifdef _LINUX_
-    setenv( "LC_NUMERIC", "en_US", 1 );
-#   endif
+    QLocale::setDefault( QLocale::system() );
 
     QApplication *app = new QApplication( argc, argv );
 
