@@ -1,3 +1,9 @@
+2021-06-12 Marek M. Cel <marekcel@marekcel.pl>
+    
+    * better locale support
+
+
+    
 2021-04-17 Marek M. Cel <marekcel@marekcel.pl>
     
     * initial commit
